# BIC

./: BIC.ipynb  CMakeLists.txt  README.md
bench/: CMakeLists.txt  bic_bench.cpp
include/bic/: bic.hpp
test/: bic_test.cpp  util.hpp
